# PythonCourse

./: .gitignore  Course.py  LICENSE  Modules.md  PSQL.md  Pipfile  Tests.md  daily.py  diff.ts  exam.py  functional_tests.py  pipenv.md  poetry.md  readme.md  temp_file.txt  users.csv  база.psql
Algorithms/LinkedLists/: 1.single_linked_lists.md  4.doubly_circular_linked_lists.md  README.md
Algorithms/Recursion/: docs.md
Algorithms/Seaching/: linear_search.py
CSV/: csv_read.py  csv_write.py  users.csv
EXAM/: assessments.py  last_exam.py
Exercises/: 1-Beginner.py  dict.py  exam.py  integer.py  list.py  set.py  string.py  tic_tac_toe.py  tuple.py
FastHTML/: .sesskey  README.md  main.py  pyproject.toml
File-handling/: doc.md  doc.py  ex.py
Itertools/: docs.md
MD/: 1.Intro_and_vars.md  10.Dictionaries.md  11.Built-ins.md  12.Sets.md  2.Integers_and_operators.md  3.bool_and_if_else.md  4.String-methods.md  5.Functions.md  6.Exceptions_and_error_handling.md  7.Sequence_1.md  8.Sequence_2.md  9.Loops.md
Modules/: main.py
Online-lesson/: Amir.py  Amirbek.py  all_exercises.py  life-share.md  main.py  quiz.py
POSTGRES/: 1-First-lesson.md  2-Second-lesson.md  3-Third-lesson.md  4-Fourth-lesson.md  Second-lesson.md  Task 1.txt  Task 2.txt  Task 3.txt  Third-lesson.md  create-file.psql  exam.md
ai-projects/: openai_usage.py  transformers_usage.py
python3/: readme.md
teleBot/: Pipfile  main.py  readme.md  requirements.txt
tg_bot/: .gitignore  README.md  daily.py  gpt.py  pyproject.toml  requirements.txt  tg.py
today/: main.py
w3resources/: recursion.py
(+97 files in other folders)
